mobile 100vh arreglo

--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,7 @@ header{
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     height: 100vh;
+    height: -webkit-fill-available;
 }
 
 
