--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ header{
 
 .wrapper_home{
     justify-content: space-between;
-    padding: 120px 25px 20px 25px;
+    padding: 120px 25px 50px 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -335,7 +335,13 @@ section{
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 120px 25px 0px 25px;
+    padding: 120px 25px 50px 25px;
+}
+
+.about_content{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .oculto{
@@ -372,7 +378,7 @@ section{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 200px 25px 20px 25px;
+    padding: 200px 25px 40px 25px;
     height: 100%;
 }
 
@@ -522,7 +528,7 @@ section{
     /*PROYECTO*/
 
     .project_content{
-        padding-bottom: 10px;
+        padding-bottom: 0;
     }
 
     
