--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,13 @@ a{
     margin: 0 auto;
 }
 
+.link{
+    color: #E96059;
+}
 
+.link:hover{
+    border-bottom: 1.2px solid #E96059;
+}
 
 
 /*COLORES*/
